# Sarc_clone

./: .gitignore  README.md  experiments.ipynb  main.py  pyproject.toml
appendix_laae/: deepseek.py  eval.py  explain_using_ig.json  explain_using_lime.json  explain_using_tcav.json  generate_concepts.py  main.py  plot.py  requirements.txt  run_TCAV.py  run_squad_analysis.py  sarcasm_results.json  sarcastic_headlines.txt  sarcastic_headlines_200.txt  temp.py
appendix_laae/concepts/: absurdity.txt  all_results.json  critique_of_media_consumerism.txt  dark_humor.txt  everyday_banality.txt  exaggeration.txt  failure_disappointment.txt  juxtaposition.txt  low_expectations.txt  mocking_authority.txt  mocking_celebrities.txt  mocking_corporations.txt  personification_anthropomorphism.txt  playing_on_stereotypes.txt  political_satire.txt  random_non_sarcastic.txt  random_sarcastic.txt  self-deprecation.txt  taboo_subjects.txt  understatement.txt  weird_news.txt
appendix_laae/plot/: summary_table.csv
appendix_laae/results/: classify_concepts_using_gpt4o.json  explain_using_gpt4o.json  gpt-4o-mini_results.json  gpt-4o_results.json  o1-mini_results.json
appendix_laae/results/comprehensizeness/: results_ig.json  results_lime.json  results_tcav.json
appendix_laae/results/robustness/: results_ig.json  (+2 more)
appendix_laae/validation/: val_random_non_sarcastic.txt  val_random_sarcastic.txt
sarcasm/: constants.py  data_handler.py
sarcasm/data_generator/: chatgpt.py
sarcasm/explainer/: integrated_gradient.py  lime.py
sarcasm/model/: sarcasm_classifier.py  sarcasm_remover.py
(+3 files in other folders)
