[project]
name = "cs4248"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "hf-xet>=1.0.0",
    "kagglehub>=0.3.11",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "transformers>=4.50.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "notebook>=7.3.3",
    "openai>=1.70.0",
    "ruff>=0.11.4",
]
