[project]
name = "cs4248"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.2.2",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "hf-xet>=1.0.0",
    "kagglehub>=0.3.11",
    "lime>=0.2.0.1",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.50.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "notebook>=7.3.3",
    "openai>=1.70.0",
    "ruff>=0.11.4",
    "selenium>=4.31.0",
]
